// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests author view 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="title - トリビアマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Link)
      component="div"
    >
      <IconAndText
        align="right"
        iconComponent={<Memo />}
        iconPosition="left"
        link="/map/edit/1"
        text="編集"
      />
    </ForwardRef(Link)>
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        link="/categories/1"
        text="隠れミッキー"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests basic 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests draft 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="title - トリビアマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Alert)
      severity="info"
    >
      この記事は下書きです。あなただけが閲覧できます。
    </ForwardRef(Alert)>
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        link="/categories/1"
        text="隠れミッキー"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with article 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="title - トリビアマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        link="/categories/1"
        text="隠れミッキー"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with image 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    imageUrl="image.jpg"
    ogType="article"
    title="title - トリビアマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <ForwardRef(Typography)
      align="center"
      component="h2"
      variant="h4"
    >
      title
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        link="/categories/1"
        text="隠れミッキー"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <Image
      src="image.jpg"
      width="full"
    />
    <ForwardRef(Typography)>
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={<Memo />}
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
      variant="body2"
    />
    <TriviaMap
      additinalMarkers={
        Array [
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": 1,
            "park": "S",
          },
        ]
      }
      disabled={true}
      doNotShowPostMarkers={true}
      height={300}
      initCenter={
        Object {
          "areaNames": Array [
            "シー",
          ],
          "lat": 0,
          "lng": 0,
          "markerId": 1,
          "numberOfPublicArticles": 1,
          "park": "S",
        }
      }
      initZoom={3}
      park="S"
    />
  </ForwardRef(Stack)>
</ArticleWrapper>
`;
